// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#<TextAreaField /> it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "about_text": "a",
    }
  }
>
  <div
    className="form-group"
  >
    <textarea
      className="form-control "
      name="about_text"
      onChange={[Function]}
      rows={20}
      value="a"
    />
  </div>
</form>
`;

exports[`#<TextAreaField /> should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "about_text": "",
    }
  }
>
  <div
    className="form-group"
  >
    <textarea
      className="form-control "
      name="about_text"
      onChange={[Function]}
      rows={5}
      value=""
    />
  </div>
</form>
`;

exports[`#<TextAreaField /> should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "about_text": "joe",
    }
  }
>
  <div
    className="form-group"
  >
    <textarea
      className="form-control "
      name="about_text"
      onChange={[Function]}
      rows={5}
      value="joe"
    />
  </div>
</form>
`;
